force-app/main/default/objects/Standing__c/Standing__c.object-meta.xml
<CustomObject>
    <label>Standing</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Standing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>