force-app/main/default/objects/Standing__c/fields/GA__c.field-meta.xml
<CustomField>
    <fullName>GA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GA</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>