force-app/main/default/objects/Standing__c/fields/GF__c.field-meta.xml
<CustomField>
    <fullName>GF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GF</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>