force-app/main/default/objects/Standing__c/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GP</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>