force-app/main/default/objects/Standing__c/fields/L__c.field-meta.xml
<CustomField>
    <fullName>L__c</fullName>
    <defaultValue>0</defaultValue>
    <label>L</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>