force-app/main/default/objects/Standing__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <formula>IMAGE(  Participant__r.Team__r.Icon_Link__c  , &quot;Icon&quot;, 25, 25) + &quot; &quot; +  Participant__r.Name__c</formula>
    <label>Participant Name</label>
    <type>Text</type>
</CustomField>