force-app/main/default/objects/Standing__c/fields/Plus_Minus__c.field-meta.xml
<CustomField>
    <fullName>Plus_Minus__c</fullName>
    <formula>GF__c -  GA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>+/-</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>