force-app/main/default/objects/Standing__c/fields/PTS__c.field-meta.xml
<CustomField>
    <fullName>PTS__c</fullName>
    <formula>W__c * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>