force-app/main/default/objects/Standing__c/fields/W__c.field-meta.xml
<CustomField>
    <fullName>W__c</fullName>
    <defaultValue>0</defaultValue>
    <label>W</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>