force-app/main/default/objects/Standing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tournament__c</columns>
    <columns>Participant_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>